Aanpassing Bestandscontrole teksten (bestanden)

--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -19,9 +19,9 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_KIES_METHODE_DESC="Selecteer de manier 
 BESTANDSCONTROLE_UPLOADTYPE_AUTOMAAT="Automatische controle"
 BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG="Handmatige controle"
 BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER="WeTransfer.com"
-BESTANDSCONTROLE_UPLOADTYPE_AUTOMAAT_DESC="Je bestand wordt direct gecontroleerd. Het systeem laat vervolgens weten of het bestand gereed is voor druk of dat er eerst nog wijzigingen doorgevoerd moeten worden. De levertijd gaat in op het moment dat de controle succesvol is."
-BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG_DESC="De vormgevers van Drukhetnu.nl kijken handmatig je bestand na. Als er wijzigingen doorgevoerd moeten worden, nemen we contact met je op. De levertijd kan daarom met 1 dag uitlopen."
-BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER_DESC="Lever je bestand(en) aan via Wetranfer. Het bestand wordt vervolgens gecontroleerd door ons team. Uiteraard krijg je hier een terugkoppeling van. De levertijd kan daarom met 1 dag uitlopen."
+BESTANDSCONTROLE_UPLOADTYPE_AUTOMAAT_DESC="Je bestand wordt direct gecontroleerd (alleen PDF bestanden). Het systeem laat vervolgens weten of het bestand gereed is voor druk of dat er eerst nog wijzigingen doorgevoerd moeten worden. De levertijd gaat in op het moment dat de controle succesvol is."
+BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG_DESC="De vormgevers van Drukhetnu.nl kijken handmatig je bestand na (ook andere bestandsformaten mogelijk). Als er wijzigingen doorgevoerd moeten worden, nemen we contact met je op. De levertijd kan daarom met 1 dag uitlopen."
+BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER_DESC="Lever je bestand(en) aan via Wetranfer (ook andere bestandsformaten mogelijk). Het bestand wordt vervolgens gecontroleerd door ons team. Uiteraard krijg je hier een terugkoppeling van. De levertijd kan daarom met 1 dag uitlopen."
 ;table
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLEID="Controle ID"
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLESTATUS="Status"
