--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
@@ -27,7 +27,8 @@ COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_CANCELURL_DESC="Return URL voor mislukt
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_USESECURE="Gebruik SSL"
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_USESECURE_DESC="Gebruik een https verbinding voor de return van de bank"
 
-COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_TRANSACTION_DESC_SPR="Bestelling %s, factuur %s via %s."
+COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_TRANSACTION_DESC_SPR="Factuur %s, bestelling %s via %s."
+COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_CREDIT_DESC_SPR="Creditnota %s, bestelling %s via %s."
 COM_BIXPRINTSHOP_BETALING_GESLAAGD="Je betaling is succesvol verwerkt!"
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_SUCCESS="Betaling succesvol aangevraagd."
 COM_BIXPRINTSHOP_BETALING_MISLUKT="Betaling mislukt."
