--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
@@ -6,7 +6,7 @@ COM_BIXPRINTSHOP_PLG_INVOICE_DEFAULT_DESCR="Factuurverwerking van Bixie Printsho
 COM_BIXPRINTSHOP_PLUGIN_TITLE_INVOICE_DEFAULT="Facturatie Bixie Printshop"
 COM_BIXPRINTSHOP_PLUGIN_INVOICE_DEFAULT_EERSTENUMMER="Eerste factuurnummer"
 COM_BIXPRINTSHOP_PLUGIN_INVOICE_DEFAULT_EERSTENUMMER_DESC="Geef aan welk factuurnummer de eerste factuur moet krijgen. Gebruik een prefix en voorloopnullen, bijv BPS-00001"
-
+COM_BIXPRINTSHOP_PLUGIN_INVOICE_CREDITACTIVE="Gebruik creditmanagement Buckaroo?"
 COM_BIXPRINTSHOP_PLUGIN_INVOICE_DEFAULT_FILENAMETPL="Template bestandsnaam"
 COM_BIXPRINTSHOP_PLUGIN_INVOICE_DEFAULT_FILENAMETPL_DESC="Geef aan hoe de bestandsnaam moet worden. Standaard: {datum}-factuur-{factuurnummer}. Gebruik geen spaties of speciale tekens!"
 COM_BIXPRINTSHOP_FACTUUR_DUEDATE_SPRF="Gezien de betalingstermijn welke wij hebben toegekend aan dit account, dient de betaling van deze factuur voor %s afgerond te zijn."
