--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -66,6 +66,7 @@ BIX_MM="mm"
 COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
 BIX_AANTAL_PAGS="Aantal pagina's"
 BIX_GAST="Gastgebruiker"
+BIX_UP="omhoog"
 ;aanhef
 BIX_AANHEF_FORMEEL_M="Geachte heer %s"
 BIX_AANHEF_FORMEEL_V="Geachte mevrouw %s"
