--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
@@ -19,6 +19,8 @@ COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_SOAPTHUMBPRINT="Thumbprint van certific
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_SOAPTHUMBPRINT_DESC="De thumbprint van het certificaat is te vinden op het Buckaroo Payment Plaza"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_SECRETKEY="Secretkey"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_SECRETKEY_DESC="Secret key voor Digitale handtekening is te vinden op het Buckaroo Payment Plaza"
+COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_USENOOVERRIDE="Gebruik nooverride"
+COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_USENOOVERRIDE_DESC="Plaats Google '&utm_nooverride=1' in de return vanuit Buckaroo"
 
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_RETURNURL="Return menulink"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_RETURNURL_DESC="Return URL voor geslaagde betalingen"
