--- a/administrator/language/nl-NL/nl-NL.plg_user_bps_profile.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_user_bps_profile.ini
@@ -40,6 +40,7 @@ PLG_USER_BPS_PROFILE_ZAKPAR="Type klant"
 PLG_USER_BPS_PROFILE_ZAKPAR_DESC="Particulier of zakelijke klant"
 PLG_USER_BPS_PROFILE_ZAKELIJK="Zakelijk"
 PLG_USER_BPS_PROFILE_PARTICULIER="Particulier"
+PLG_USER_BPS_PROFILE_OPTION_NEWSLETTER_AGREEBOX="Op de hoogte blijven van exclusieve aanbiedingen & tips"
 
 PLG_USER_BPS_PROFILE_FIRMTYPE="Soort bedrijf"
 PLG_USER_BPS_PROFILE_FIRMTYPE_DESC="Type bedrijf"
