--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -276,6 +276,7 @@ COM_BIXPRINTSHOP_CONFIG_PLGGROUP_DATA="Gegevens plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ATTRIB ="Productoptie plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ORDER="Orderbewerking plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_IMPORT="Import plugins"
+COM_BIXPRINTSHOP_CONFIG_PLGGROUP_EXPORT="Export plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_VERVOER="Vervoer plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_DRUKKERIJ="Drukkerij plugins"
 COM_BIXPRINTSHOP_PLG_ACTIVE="Activeer plugin"
