--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -22,6 +22,8 @@ BIX_INACTIEF="Inactief"
 BIX_VERWIJDERD="Verwijderd"
 BIX_AANTAL_ITEMS="Aantal per pagina"
 BIX_AANTAL_PAGS="Aantal pagina's"
+BIX_YES="Ja"
+BIX_NO="Nee"
 BIX_OKE="Oké"
 BIX_VERZILVER="Verzilver"
 BIX_DATE="d-m-Y H:i:s"
