--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -58,6 +58,7 @@ BIX_RIGHT="Rechts"
 BIX_LEFT="Links"
 BIX_CENTER="Midden"
 BIX_ORIGINAL="Originele grootte"
+BIX_AANTAL="Aantal"
 COM_BIXPRINTSHOP_BEWERK_PROFIEL="Bewerk Klant"
 COM_BIXPRINTSHOP_ADMIN_ALS_GEBRUIKER_SPR="Administrator werkt als gebruiker %s."
 BIX_DATE="d-m-Y H:i:s"
@@ -65,6 +66,7 @@ BIX_MM="mm"
 COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
 BIX_AANTAL_PAGS="Aantal pagina's"
 BIX_GAST="Gastgebruiker"
+BIX_UP="omhoog"
 ;aanhef
 BIX_AANHEF_FORMEEL_M="Geachte heer %s"
 BIX_AANHEF_FORMEEL_V="Geachte mevrouw %s"
@@ -134,7 +136,6 @@ COM_BIXPRINTSHOP_SUBMENU_CONFIG_PLUGINS="Plugins"
 COM_BIXPRINTSHOP_SUBMENU_CONFIG_MAIL="Mail"
 ;form
 COM_BIXPRINTSHOP_LEGEND_CONFIG_ALGEMEEN="Algemene instellingen"
-COM_BIXPRINTSHOP_LEGEND_CONFIG_TRADETRACKER="TradeTracker"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_DEBUG="Debug instellingen"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_DRUKKERIJ="Drukkerij instellingen"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_BETALEN="Betaalmethodes"
@@ -277,17 +278,6 @@ COM_BIXPRINTSHOP_BETALEN_GEEN_PLUGINRETURN="Geen return ontvangen van betaalplug
 COM_BIXPRINTSHOP_BETALEN_PUSH_GEENBESTELID="Geen bestelling-ID in push bericht!"
 COM_BIXPRINTSHOP_BETALEN_PUSH_FOUT="Fout in verwerking pushbericht betaalprovider"
 
-;tradetracker
-COM_BIXPRINTSHOP_CONFIG_TT_ACTIVE="Gebruik TradeTracker"
-COM_BIXPRINTSHOP_CONFIG_TT_ACTIVE_DESC="Activeer het in sessie vastleggen van TradeTracker verkeer"
-COM_BIXPRINTSHOP_CONFIG_TT_CAMPAIGNID="Campaign ID"
-COM_BIXPRINTSHOP_CONFIG_TT_CAMPAIGNID_DESC="Het door TradeTracker opgegeven campaignID"
-COM_BIXPRINTSHOP_CONFIG_TT_PRODUCTID="Product ID"
-COM_BIXPRINTSHOP_CONFIG_TT_PRODUCTID_DESC="Het door TradeTracker opgegeven productID"
-COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_CONVERSIONTYPE="Conversie type"
-COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_CONVERSIONTYPE_DESC="Het conversie type voor deze campagne"
-CONVERSIONTYPE_LEAD="Lead"
-CONVERSIONTYPE_SALES="Sales"
 ;plugins
 COM_BIXPRINTSHOP_PLUGINS="Plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_JSCRIPT="Javascript plugins"
@@ -296,7 +286,9 @@ COM_BIXPRINTSHOP_CONFIG_PLGGROUP_DATA="Gegevens plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ATTRIB ="Productoptie plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ORDER="Orderbewerking plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_IMPORT="Import plugins"
+COM_BIXPRINTSHOP_CONFIG_PLGGROUP_EXPORT="Export plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_VERVOER="Vervoer plugins"
+COM_BIXPRINTSHOP_CONFIG_PLGGROUP_DRUKKERIJ="Drukkerij plugins"
 COM_BIXPRINTSHOP_PLG_ACTIVE="Activeer plugin"
 COM_BIXPRINTSHOP_PLG_DEBUG="Toon debug"
 COM_BIXPRINTSHOP_PLG_DEBUG_DESC="Toon debuginformatie bij deze plugin"
@@ -383,6 +375,8 @@ COM_BIXPRINTSHOP_DRUKKERIJEN_ALIAS_DESC="De alias vormt de url voor de drukkerij
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYNAAM="Bedrijfsnaam"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYNAAM_DESC="Geef de bedrijfsnaam op."
 COM_BIXPRINTSHOP_DRUKKERIJEN_ADRES="Adres"
+COM_BIXPRINTSHOP_DRUKKERIJEN_DRUKKPLUGIN="Drukkerij plugin"
+COM_BIXPRINTSHOP_DRUKKERIJEN_DRUKKPLUGIN_DESC="Selecteer eventueel een plguin voor extra opties bij deze drukkerij."
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYSTRAAT="Straatnaam"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYHUISNUMMER="Huisnummer"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYPOSTCODE="Postcode"
@@ -440,6 +434,7 @@ COM_BIXPRINTSHOP_PRIJS_PRIJSDATA="Data"
 BIX_SELECT_ATTRIB_SPR="-selecteer %s-"
 BIX_SELECT_PRODUCT="-selecteer product-"
 BIX_SELECT_DRUKKER="-selecteer drukker-"
+COM_BIXPRINTSHOP_TITLE_REFRESHCACHE="Ververs cache"
 ;***
 ;* productopties
 ;*
@@ -468,6 +463,7 @@ ATTRIBCALCPER_DRUK="Drukkosten"
 ATTRIBCALCPER_OPTIE="Andere optie"
 ATTRIBCALCPER_PAPIER="Papierkosten"
 ATTRIBCALCPER_PLANO="Totale planokosten"
+ATTRIBCALCPER_AFWERKING="Afwerking"
 ATTRIBCALCPER_TOTAAL="Totale kosten"
 ATTRIBCALCTYPE_NONE="Geen"
 ATTRIBCALCTYPE_OPSLAG_PER="Opslag per"
@@ -624,6 +620,7 @@ COM_BIXPRINTSHOP_PRODUCTEN_IMAGE="Productafbeelding"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_DESC="Hier kunt u een afbeelding uploaden voor de productpagina"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_ORIG="Originele grootte"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_X_PX="Producticoon %d px"
+COM_BIXPRINTSHOP_PRODUCTEN_METATITLE="Meta titel"
 COM_BIXPRINTSHOP_PRODUCTEN_METADESCR="Meta beschrijving"
 COM_BIXPRINTSHOP_PRODUCTEN_METAKEYWORDS="Meta keywords"
 COM_BIXPRINTSHOP_PRODUCTEN_PRODUCTDESCR="Productbeschrijving"
@@ -640,7 +637,7 @@ COM_BIXPRINTSHOP_PRODUCTEN_AUTO_ITEMID="Automatisch aangemaakt door Bixie Prints
 COM_BIXPRINTSHOP_PRODUCTEN_SHOW_DEFAULT_CARTBUTTON="Toon standaard bestelknop"
 COM_BIXPRINTSHOP_PRODUCT_ATTRIBS_AVAILABLE="Beschikbare productopties"
 COM_BIXPRINTSHOP_PRODUCT_ATTRIBS_INPRODUCT="Gekoppelde productopties"
-
+COM_BIXPRINTSHOP_PRODUCTEN_DISABLE_UPLOAD="Upload uitschakelen"
 COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE="Paginatitel"
 COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE_DESC="Geef eventueel een alternatieve paginatitel op. Standaard wordt de productnaam gebruikt."
 
@@ -651,8 +648,6 @@ COM_BIXPRINTSHOP_PRODUCTEN_POS_SIDEBOTTOM="Naast form - Onder"
 ;drukvellen
 COM_BIXPRINTSHOP_AANTAL_VAN_TOT_SPRF="Van %s tot %s stuks"
 COM_BIXPRINTSHOP_GEWICHT_VAN_TOT_SPRF="Van %s tot %s kilo"
-MACHINETYPE_DIGITAAL="Digitaal"
-MACHINETYPE_OFFSET="Offset"
 COM_BIXPRINTSHOP_ADRES_TAV="t.a.v."
 COM_BIXPRINTSHOP_ADRES_TELEFOON="Telefoonnummer"
 COM_BIXPRINTSHOP_ERROR_NO_ORDEROPTIONVALUES="Geen order optie waardes "
@@ -830,6 +825,7 @@ COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEPRIJS="Administratiekosten"
 COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEBTW="Administratie btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELKORTING="Korting"
+COM_BIXPRINTSHOP_BESTELLING_KORTINGBTW="Korting btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELTYPE="Bestelling type"
@@ -846,9 +842,10 @@ COM_BIXPRINTSHOP_BESTELLING_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURADRES="Factuuradres"
 FACTUUR_INITIEEL="Initiëel"
 FACTUUR_RESERVERING="Reservering"
-FACTUUR_CREDIT="Credit"
+FACTUUR_CREDITFACTUUR="Credit"
 FACTUUR_GECREDITEERD="Gecrediteerd"
-
+COM_BIXPRINTSHOP_FACTUUR_AANGEMAAKT="Factuur aangemaakt"
+COM_BIXPRINTSHOP_FACTUUR_GECREDITEERD="Factuur gecrediteerd"
 ORDERTYPE_INTERN="Ordertype intern"
 ORDERTYPE_EXTERN="Ordertype extern"
 COM_BIXPRINTSHOP_STATUS_STATUSCONFIRMED="Bevestigd"
@@ -913,6 +910,7 @@ COM_BIXPRINTSHOP_FACTUUR_CREDITID="Credit ID"
 COM_BIXPRINTSHOP_FACTUUR_EXTERNID="Extern ID"
 COM_BIXPRINTSHOP_FACTUUR_BETAALID="Betaal ID"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURNUMMER="Factuurnummer"
+COM_BIXPRINTSHOP_FACTUUR_FACTUURREDEN="Factuurreden"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURSTATUS="Factuurstatus"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURLINK="Factuur link"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURDATUM="Factuurdatum"
@@ -929,6 +927,13 @@ COM_BIXPRINTSHOP_FACTUUR_GROEP5="Factuurgroep 5"
 COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
+COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
+COM_BIXPRINTSHOP_CREEER_FACTUUR="Nieuwe factuur maken"
+COM_BIXPRINTSHOP_BESTELLING_FACTUUR_VERSCHIL="Verschil tussen bestelbedrag en factuurbedrag!"
+
+COM_BIXPRINTSHOP_FACTUURREDEN_RESERVERING="Aanmaken factuurnummer"
+COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
+
 COM_BIXPRINTSHOP_ORDER_TOTAALNETTO="Order totaal netto"
 COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal btw"
 COM_BIXPRINTSHOP_ORDER_TOTAALBRUTO="Order totaal bruto"
@@ -974,6 +979,8 @@ COM_BIXPRINTSHOP_ORDER_ORDERNETTO="Orderbedrag netto"
 COM_BIXPRINTSHOP_ORDER_ORDERBTW="Order btw"
 COM_BIXPRINTSHOP_ORDER_ORDERBRUTO="Orderbedrag bruto"
 COM_BIXPRINTSHOP_ORDER_ORDERTYPE="Ordertype"
+BIX_ALLE_ORDERS="Toon alle orders"
+BIX_VERBERG_ONBESTELD="Verberg onbestelde"
 
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's"
@@ -982,6 +989,8 @@ COM_BIXPRINTSHOP_ORDER_BESTELID="Bestelling ID / Status"
 COM_BIXPRINTSHOP_ORDER_USER="Gebruiker"
 COM_BIXPRINTSHOP_ORDER_LOCKCALC="Blokkeer calculatie"
 COM_BIXPRINTSHOP_ORDER_LOCKCALC_DESC="Voorkom dat de order opnieuw gecalculeerd wordt."
+COM_BIXPRINTSHOP_ORDER_LOCKINKOOPCALC="Blokkeer inkoopcalculatie"
+COM_BIXPRINTSHOP_ORDER_LOCKINKOOPCALC_DESC="Voorkom dat de order opnieuw gecalculeerd wordt."
 
 COM_BIXPRINTSHOP_LEGEND_ORDER_DETAILS="Orderdetails"
 COM_BIXPRINTSHOP_LEGEND_ORDER_STATUS="Order status"
@@ -1000,6 +1009,17 @@ COM_BIXPRINTSHOP_ORDER_MARGE_AFWERKING="Marge afwerking"
 COM_BIXPRINTSHOP_ORDER_MARGE_BESTELLING="Marge orderprijs"
 COM_BIXPRINTSHOP_ORDER_MARGE_CART="Marge winkelwagen"
 
+COM_BIXPRINTSHOP_ORDER_LOKALE_BESTANDEN="Lokale bestanden"
+COM_BIXPRINTSHOP_ORDER_ORDER_BESTANDEN="Gekoppeld aan order"
+COM_BIXPRINTSHOP_ORDER_ORDER_THUMBS="Thumbs en gerelateerde bestanden"
+COM_BIXPRINTSHOP_ORDER_FTP_CONNECT="Verbinden met FTP"
+COM_BIXPRINTSHOP_ORDER_FTP_NOT_CONNECTED="Niet verbonden"
+COM_BIXPRINTSHOP_ORDER_FTP_CONNECT_ERROR_SPR="FTP-fout: %s"
+COM_BIXPRINTSHOP_ORDER_FTP_CONNECTED_SPR="Verbonden met host %s"
+COM_BIXPRINTSHOP_ORDER_FTP_CURRENTFOLDER_SPR="Inhoud van de map %s"
+COM_BIXPRINTSHOP_ORDER_FTP_SENDRIGHT="Verstuur bestanden naar de huidige FTP-map"
+COM_BIXPRINTSHOP_ORDER_FTP_TO_LIST="Naar bestandslijst"
+COM_BIXPRINTSHOP_ORDER_FTP_SENT_TO_FOLDER_SPR="Verzonden naar de map %s"
 
 ORDERTYPE_CALC="Caluclatieorder"
 COM_BIXPRINTSHOP_ORDEROPTION_ID="Orderoptie ID"
@@ -1022,6 +1042,7 @@ COM_BIXPRINTSHOP_PAPIERPRIJS_PRIJSEENHEID_DESC=""
 PRIJSEENHEID_1VEL="1 vel"
 PRIJSEENHEID_1000VEL="1000 vellen"
 PRIJSEENHEID_100KG="100 kilo"
+PRIJSEENHEID_M2="Vierkante meter"
 COM_BIXPRINTSHOP_CONFIG_PLUGIN_ACTIVE="Plugin actief"
 COM_BIXPRINTSHOP_CONFIG_PLUGIN_DEBUG="Plugin debug"
 
@@ -1157,7 +1178,7 @@ COM_BIXPRINTSHOP_MAILHISTORIE_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_MAILHISTORIE_ADMIN="Admin"
 COM_BIXPRINTSHOP_MAILHISTORIE_NOMAIL="Geen mailberichten"
 
-;prijzen
+;prijzen 
 BIX_SELECT_PRODUCT="Selecteer product"
 BIX_SELECT_DRUKKER="Selecteer drukkerij"
 
