--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_export_twinfield.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_export_twinfield.ini
@@ -22,7 +22,7 @@ BIX_TWINFIELD_GEEN_FACTUUR_GEMAAKT="Factuur nog niet aangemaakt!"
 BIX_TWINFIELD_GEEN_DEBITEURNUMMER="Geen debiteurnummer toegewezen!"
 BIX_TWINFIELD_GEEN_ADRES="Geen adres gevonden!"
 BIX_TWINFIELD_BTW_NIET_OVEREEN="BTW-bedragen komen niet overeen!"
-BIX_TWINFIELD_BTW_VRIJ_NIET_NL="Adres van BTW-vrije factuur mag niet in Nederland zijn"
+BIX_TWINFIELD_BTW_VRIJ_NIET_NL="Adres van BTW-vrije factuur mag niet in Nederland zijn, of land niet ingevuld"
 BIX_TWINFIELD_BTW_NUMMER_FORMATTED="BTW-nummer niet in juiste format"
 BIX_TWINFIELD_BTW_NUMMER_INVALID="BTW-nummer niet VIES valide"
 
