--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -67,6 +67,10 @@ COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
 BIX_AANTAL_PAGS="Aantal pagina's"
 BIX_GAST="Gastgebruiker"
 BIX_UP="omhoog"
+;attribtype voor rendering buiten product
+COM_BIXPRINTSHOP_ATTRIBTYPE_EIGENTEKST_TEKST="Eigen tekst"
+COM_BIXPRINTSHOP_ATTRIBTYPE_EIGENTEKST_LETTERTYPE="Lettertype"
+COM_BIXPRINTSHOP_ATTRIBTYPE_BUNDELEN_AANTALBUNDELS="Aantal bundels"
 ;aanhef
 BIX_AANHEF_FORMEEL_M="Geachte heer %s"
 BIX_AANHEF_FORMEEL_V="Geachte mevrouw %s"
