--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -84,19 +84,19 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_PDFRESULT="Bekijk resultaat in pdf"
 
 ;XML
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ERRORS_RESULT="Fouten"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ERRORS_RESULT_DESC="Fouten beschrijving"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ERRORS_RESULT_DESC="Deze fouten maken het onmogelijk het bestand automatisch in druk te nemen. Probeer de fout te herstellen. Vragen? Neem contact op met de klantenservice via chat of telefoon."
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WARNINGS_RESULT="Waarschuwingen"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WARNINGS_RESULT_DESC="Waarschuwingen beschrijving"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WARNINGS_RESULT_DESC="Deze waarschuwingen kunnen invloed hebben op de kwaliteit van het drukwerk."
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FIXES_RESULT="Herstellingen"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FIXES_RESULT_DESC="Herstellingen beschrijving"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NONCRITICALFAILURES_RESULT="Kritieke fouten"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NONCRITICALFAILURES_RESULT_DESC="Kritieke fouten beschrijving"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CRITICALFAILURES_RESULT="Niet-kritieke fouten"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CRITICALFAILURES_RESULT_DESC="Niet-kritieke fouten beschrijving"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FIXES_RESULT_DESC="De automatische bestandscontrole heeft deze acties uitgevoerd om het bestand drukklaar te maken."
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NONCRITICALFAILURES_RESULT="Niet-kritieke fouten"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NONCRITICALFAILURES_RESULT_DESC="Deze fouten staan een goede uitvoering van het drukwerk niet in de weg."
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CRITICALFAILURES_RESULT="Kritieke fouten"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CRITICALFAILURES_RESULT_DESC="Deze fouten maken het onmogelijk het bestand automatisch in druk te nemen. Probeer de fout te herstellen. Vragen? Neem contact op met de klantenservice via chat of telefoon."
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SIGNOFFS_RESULT="Afhandelingen"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SIGNOFFS_RESULT_DESC="Afhandelingen beschrijving"
 
 CONTROLERESULT_FOUT="Het bestand is niet optimaal. De klantenservice neemt contact met u op. U kunt ons ook bellen op 085-2731249"
 CONTROLERESULT_HERSTELD="Bestand is hersteld en gereed voor druk."
-CONTROLERESULT_GOED="Bestand is goed gekeurd en gereed voor druk."
+CONTROLERESULT_GOED="Bestand is goedgekeurd en gereed voor druk."
 
