--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_drukkerij_netzodruk.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_drukkerij_netzodruk.ini
@@ -4,10 +4,17 @@
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_DESCR="Specifieke aanpassingen voor Netzodruk"
 
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_FIELDSETTITLE="Netzodruk"
-
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_XML="XML-bestand Netzodruk"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_PRODUCTCODE="Productcode"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_PRODUCTCODE_DESCR="Productiecode aangeleverd door drukkerij"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_PRODUCTBESCHR="Productbeschrijving"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_PRODUCTBESCHR_DESC="Beschrijving door de leverancier geleverd."
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_VERVOER="Vervoersomschrijving"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_VERVOER_DESC="Type vervoer van deze order"
+
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_ERROR_SPR="Fout bij aanmaken Netzodruk-XML: %s."
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_XML_CREATED="XML-bestand voor Netzodruk aangemaakt."
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_KLANTCODE="Klantcode"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_CONTACT="Contactpersoon"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_INVALID_DATA="Data incompleet"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_REFRESH_XML="Ververs Netzodruk XML"
