scheiden afwer/papierprijs

--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -356,6 +356,8 @@ COM_BIXPRINTSHOP_LAATSTE_BESTELLINGEN="Laatste bestellingen"
 COM_BIXPRINTSHOP_TITLE_DRUKKERIJEN="Drukkerijen"
 ;form
 COM_BIXPRINTSHOP_TITLE_DRUKKERIJ="Drukkerij"
+COM_BIXPRINTSHOP_TITLE_PAPERPRICES="Papierprijzen"
+COM_BIXPRINTSHOP_TITLE_AFWERKPRICES="Afwerkprijzen"
 COM_BIXPRINTSHOP_LEGEND_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_LEGEND_DRUKKERIJ_ADMIN="Administratie"
 COM_BIXPRINTSHOP_LEGEND_DRUKKERIJ_PARAMS="Parameters"
