--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_drukkerij_netzodruk.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_drukkerij_netzodruk.ini
@@ -18,3 +18,5 @@ COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_KLANTCODE="Klantcode"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_CONTACT="Contactpersoon"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_INVALID_DATA="Data incompleet"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_REFRESH_XML="Ververs Netzodruk XML"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_SEND_ORDERFILES="Verstuur orderbestanden naar NZD"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_HUIDIGE_XML_BESTANDEN="Bestanden die nu aan deze order gekoppeld zijn:"
