--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_hesjescalc.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_hesjescalc.ini
@@ -41,3 +41,5 @@ COM_BIXPRINTSHOP_PLG_MACHINECALC_ATTRIBMARGEBESTELLING="Verkoopmarge optie"
 COM_BIXPRINTSHOP_PLG_MACHINECALC_ATTRIBMARGEBESTELLING_DESC="Geef aan welke marge op deze optie wordt gerekend. Deze marge overschrijft alle eerder ingestelde marges"
 COM_BIXPRINTSHOP_PLG_MACHINECALC_APARTGRAMMAGE="Losse grammage-optie?"
 COM_BIXPRINTSHOP_PLG_MACHINECALC_APARTGRAMMAGE_DESC="Gebruik een aparte optie om grammage met papier te combineren."
+
+COM_BIXPRINTSHOP_PLG_MACHINECALC_OFFERTEBESCHR="Melding naar gebruiker"
