--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -21,14 +21,15 @@ BIX_DESCENDING="Aflopend"
 BIX_STATUS="Status"
 BIX_ACTIEF="Actief"
 BIX_INACTIEF="Inactief"
-BIX_DELETED="Verwijderd"
 BIX_VERWIJDERD="Verwijderd"
 BIX_AANTAL_ITEMS="Aantal per pagina"
 BIX_AANTAL_PAGS="Aantal pagina's"
+BIX_YES="Ja"
+BIX_NO="Nee"
 BIX_OKE="Oké"
 BIX_VERZILVER="Verzilver"
 BIX_DATE="d-m-Y H:i:s"
-BIX_ACTIVE="Actief"
+
 BIX_GEEN_KEUZE="Geen keuze gemaakt"
 BIX_AANTAL="Aantal"
 ;attribtype voor rendering buiten product
@@ -73,8 +74,6 @@ COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's"
 COM_BIXPRINTSHOP_DOWNLOAD_FACTUUR="Factuur downloaden"
 COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
-COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
-COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's"
 COM_BIXPRINTSHOP_ORDER_ORDERCOMMENT="Opmerking bij bestelling"
 
 ; users, adressen
@@ -82,7 +81,6 @@ COM_BIXPRINTSHOP_USER_TITLE_GEGEVENS="Gegevens"
 COM_BIXPRINTSHOP_USER_TITLE_HISTORIE="Bestelhistorie"
 COM_BIXPRINTSHOP_TITLE_ADRESSEN="Adresgegevens"
 COM_BIXPRINTSHOP_TITLE_HISTORIE="Bestelhistorie"
-
 COM_BIXPRINTSHOP_ADRESSEN_DESCR="Beheer hieronder een adresboek met afleveradressen. Deze adressen kunnen worden geselecteerd bij het bestellen."
 BIX_ZOEKEN_ADRESSEN="Zoek in adressen"
 COM_BIXPRINTSHOP_ADRES_DELETE="Verwijder adres"
