--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -115,7 +115,8 @@ COM_BIXPRINTSHOP_ADRESINFORMATIE="Adresinformatie"
 COM_BIXPRINTSHOP_REGISTRATION_ADRES="Factuuradres"
 COM_BIXPRINTSHOP_REGISTRATION_EXTRA_ADRES="U kunt extra verzendadressen later aanmaken in uw profiel!"
 COM_BIXPRINTSHOP_REGISTRATION_REGISTER="Vraag account aan!"
-
+COM_BIXPRINTSHOP_ACCOUNT_AANVRAGEN="Account aanmaken"
+COM_BIXPRINTSHOP_ACCOUNT_AANVRAGEN_INTRO_SPR="Vul onderstaand formulier in om te registreren voor %s."
 ; cart
 COM_BIXPRINTSHOP_COPY_ORDER="Kopiëer order"
 COM_BIXPRINTSHOP_COPY_ORDER_DESC="Plaats order met identieke eigenschappen in de winkelwagen"
