--- a/administrator/language/nl-NL/nl-NL.plg_user_bps_profile.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_user_bps_profile.ini
@@ -79,6 +79,15 @@ BIX_AANHEF_FORMEEL_M="Geachte heer %s"
 BIX_AANHEF_FORMEEL_V="Geachte mevrouw %s"
 BIX_BRIEFHOOFD_FORMEEL_M="Dhr %s %s"
 BIX_BRIEFHOOFD_FORMEEL_V="Mevr %s %s"
+PLG_USER_BPS_PROFILE_ADMIN_BETAALTERMIJN="Betaaltermijn"
+PLG_USER_BPS_PROFILE_ADMIN_BETAALTERMIJN_DESC="Betaaltermijn voor deze klant"
+7_DAGEN="7 dagen"
+14_DAGEN="14 dagen"
+21_DAGEN="21 dagen"
+30_DAGEN="30 dagen"
+90_DAGEN="90 dagen"
+PLG_USER_BPS_PROFILE_ADMIN_BTWPLICHT="BTW-plichtig"
+PLG_USER_BPS_PROFILE_ADMIN_BTWPLICHT_DESC="Moet deze klant BTW betalen?"
 
 PLG_USER_BPS_BPSADRES_SLIDER_LABEL="Gebruikers adressen"
 PLG_USER_BPS_PROFILE_ADRESSEN="Adressen"
