--- a/administrator/language/nl-NL/nl-NL.plg_user_bps_user_svn.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_user_bps_user_svn.ini
@@ -5,6 +5,14 @@
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini fïles need to be saved as UTF-8 - No BOM
 
-PLG_USER_BPS_USER_SVN=="BixPrintshop - Profiel Sportvanen"
-PLG_USER_BPS_USER_SVN=_XML_DESCRIPTION="Bixie Printshop Gebruikersprofiel plug-in tbv Sportvanen"
+PLG_USER_BPS_USER_SVN="BixPrintshop - Profiel Sportvanen"
+PLG_USER_BPS_USER_SVN_XML_DESCRIPTION="Bixie Printshop Gebruikersprofiel plug-in tbv Sportvanen"
 
+PLG_USER_BPS_PROFILE_FIELD_NEWSLETTER="Aanmelden nieuwsbrief"
+PLG_USER_BPS_PROFILE_FIELD_NEWSLETTER_DESC="Blijf op de hoogte van al het nieuws van Boekenbrochures"
+
+PLG_USER_BPS_PROFILE_TEL="Telefoon"
+PLG_USER_BPS_PROFILE_TEL_DESC="Voer je primaire telefoonnummer in"
+PLG_USER_BPS_PROFILE_TEL_MESSAGE="Vul jetelefoonnummer in."
+PLG_USER_BPS_PROFILE_GSM="Mobiel"
+PLG_USER_BPS_PROFILE_GSM_DESC="Voer je mobiele nummer in."
