--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -869,6 +869,7 @@ COM_BIXPRINTSHOP_TRANSACTIELOG_STATUSMESSAGE="Status tekst"
 COM_BIXPRINTSHOP_TRANSACTIELOG_MESSAGE="Gebruikers bericht"
 COM_BIXPRINTSHOP_TRANSACTIELOG_SUCCES="Request geslaagd"
 COM_BIXPRINTSHOP_TRANSACTIELOG_VALID="Transactie valide"
+COM_BIXPRINTSHOP_TRANSACTIELOG_TYPE="Request type"
 
 COM_BIXPRINTSHOP_STATUS_STATUSCONFIRMED="Bevestigd"
 COM_BIXPRINTSHOP_STATUS_STATUSCONFIRMED_DESC=""
