--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -194,6 +194,7 @@ COM_BIXPRINTSHOP_CART_KORTING="Kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_PLACEHOLDER="Uw kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_DESC="Voer uw kortingscode in"
 COM_BIXPRINTSHOP_CART_KORTING_INFO_TITLE="Korting via een couponcode"
+COM_BIXPRINTSHOP_ORDER_ORDERNETTO="Totaalbedrag netto"
 ;statussen
 BIX_SUCCESS="Voltooid"
 BIX_FAILURE="Betaalrequest mislukt"
