--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -85,7 +85,7 @@ COM_BIXPRINTSHOP_USER_TITLE_HISTORIE="Bestelhistorie"
 COM_BIXPRINTSHOP_TITLE_ADRESSEN="Adresgegevens"
 COM_BIXPRINTSHOP_TITLE_HISTORIE="Bestelhistorie"
 
-COM_BIXPRINTSHOP_ADRESSEN_DESCR="Beheer hieronder een adresboek met afleveradressen. Deze adressen kunnen worden geselecteerd bij het bestellen."
+COM_BIXPRINTSHOP_ADRESSEN_DESCR="Je weet het al, maar toch maken we het je graag makkelijk. Hieronderis het mogelijk jouw adresboek samen te stellen met al jouw leveradressen. Deze adressen kun je dan eenvoudig selecteren tijdens je bestelling."
 BIX_ZOEKEN_ADRESSEN="Zoek in adressen"
 COM_BIXPRINTSHOP_ADRES_DELETE="Verwijder adres"
 COM_BIXPRINTSHOP_ADRES_EDIT="Bewerk adres"
@@ -96,7 +96,7 @@ COM_BIXPRINTSHOP_ADRES_AANHEF_DESC="Geef de aanhef op voor het adres"
 COM_BIXPRINTSHOP_ADRES_EMAIL="Email"
 COM_BIXPRINTSHOP_ADRES_EMAIL_DESC="Nodig voor het verzenden van de bevestiging en factuur"
 COM_BIXPRINTSHOP_ADRES_NAAM="Naam"
-COM_BIXPRINTSHOP_ADRES_NAAM_DESC="Geef uw volledige naam op"
+COM_BIXPRINTSHOP_ADRES_NAAM_DESC="Geef je volledige naam op"
 COM_BIXPRINTSHOP_ADRES_TAV="t.a.v."
 COM_BIXPRINTSHOP_ADRES_TAV_DESC="Geef eventueel een 'ter attentie van' naam op voor dit adres"
 COM_BIXPRINTSHOP_ADRES_ALIAS="Alias"
@@ -114,8 +114,10 @@ COM_BIXPRINTSHOP_VERZENDENFACTURADRES="Verzend- en factuuradres"
 COM_BIXPRINTSHOP_ADRESINFORMATIE="Adresinformatie"
 
 ; Registratie
+COM_BIXPRINTSHOP_PETERPRINT_ACCOUNT_AANVRAGEN="PeterPrint account aanvragen"
+COM_BIXPRINTSHOP_PETERPRINT_ACCOUNT_AANVRAGEN_INTRO="Wij als drukwerk specialisten zijn er speciaal voor jou, daarom is onze website niet toegankelijk voor iedereen. Wil je prijzen berekenen en kennis maken met onze geweldige service, maak hieronder dan jouw PeterPrint account aan!"
 COM_BIXPRINTSHOP_REGISTRATION_ADRES="Factuuradres"
-COM_BIXPRINTSHOP_REGISTRATION_EXTRA_ADRES="U kunt extra verzendadressen later aanmaken in uw profiel!"
+COM_BIXPRINTSHOP_REGISTRATION_EXTRA_ADRES="Je kunt extra verzendadressen later aanmaken in je profiel!"
 COM_BIXPRINTSHOP_REGISTRATION_REGISTER="Vraag account aan!"
 COM_BIXPRINTSHOP_ACCOUNT_AANVRAGEN="Account aanmaken"
 COM_BIXPRINTSHOP_ACCOUNT_AANVRAGEN_INTRO_SPR="Vul onderstaand formulier in om te registreren voor %s."
@@ -154,16 +156,16 @@ COM_BIXPRINTSHOP_REGISTREER_DESC="Maak account aan voor deze website"
 COM_BIXPRINTSHOP_GASTBESTEL="Bestel als gast"
 COM_BIXPRINTSHOP_GASTBESTEL_DESC="Bestel eenmalig zonder te registreren"
 COM_BIXPRINTSHOP_INLOGGEN="Inloggen"
-COM_BIXPRINTSHOP_INLOGGEN_DESC="Log in met uw bestaande account"
+COM_BIXPRINTSHOP_INLOGGEN_DESC="Log in met je bestaande account"
 COM_BIXPRINTSHOP_VOEG_ADERS_TOE="Voeg eerst een adres toe"
 COM_BIXPRINTSHOP_VOEG_FACTUURADRES_TOE_SPR="Stel een standaardfactuuradres in je %sprofiel%s"
 COM_BIXPRINTSHOP_SELECT_ADRESSEN="Selecteer adressen"
 COM_BIXPRINTSHOP_SELECT_VERZENDADRES="Selecteer een leveradres"
-COM_BIXPRINTSHOP_SELECT_FACTUURADRES="Selecteer een factuuradres"
+COM_BIXPRINTSHOP_SELECT_FACTUURADRES="Jouw factuuradres"
 COM_BIXPRINTSHOP_VERZENDADRES="Afleveradres"
 COM_BIXPRINTSHOP_FACTUURADRES="Factuuradres"
-COM_BIXPRINTSHOP_CHECKOUT_JOUWREF="Uw referentie"
-COM_BIXPRINTSHOP_PLG_FACTUURMAIL_FACTUURREFERENTIE_DESC="Vermeld hier uw eigen referentie zoals inkoopnummer of klantnaam."
+COM_BIXPRINTSHOP_CHECKOUT_JOUWREF="Jouw referentie"
+COM_BIXPRINTSHOP_PLG_FACTUURMAIL_FACTUURREFERENTIE_DESC="Vermeld hier je eigen referentie zoals inkoopnummer of klantnaam."
 COM_BIXPRINTSHOP_CHECKOUT_BESTANDSUPLOAD="Bestandsupload"
 COM_BIXPRINTSHOP_CHECKOUT_BESTANDSUPLOAD_DESC="Het uploaden van bestanden is mogelijk na je bestelling."
 COM_BIXPRINTSHOP_CHECKOUT_NAARBETALING="Naar betaling"
@@ -176,7 +178,7 @@ COM_BIXPRINTSHOP_UPLOAD_BESTANDEN="Je bent er bijna! Hier kun je je bestanden up
 COM_BIXPRINTSHOP_UPLOADEN="Bestanden uploaden"
 COM_BIXPRINTSHOP_LATER_UPLOADEN="U kunt de bestanden ook na de betaling uploaden."
 ; userregistratie
-COM_BIXPRINTSHOP_ADRESSEN_IN_PROFIEL="Adressen kunt u invoeren in uw gebruikersprofiel."
+COM_BIXPRINTSHOP_ADRESSEN_IN_PROFIEL="Adressen kun je invoeren in je gebruikersprofiel."
 
 ; Afrekenen
 COM_BIXPRINTSHOP_TITLE_AFRONDEN="Bestelling afronden"
@@ -190,9 +192,9 @@ COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT="Opmerking bij bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT_SHORT="Opmerking"
 COM_BIXPRINTSHOP_BESTELDETAILS="Details bestelling"
 COM_BIXPRINTSHOP_PRIJSDETAILS="Details prijsopbouw"
-COM_BIXPRINTSHOP_TOTAALNETTO="Totaalbedrag netto"
-COM_BIXPRINTSHOP_TOTAALBTW="Totaalbedrag btw"
-COM_BIXPRINTSHOP_TOTAALBRUTO="Totaalbedrag bruto"
+COM_BIXPRINTSHOP_TOTAALNETTO="Netto Totaal"
+COM_BIXPRINTSHOP_TOTAALBTW="BTW Totaal"
+COM_BIXPRINTSHOP_TOTAALBRUTO="Bruto Totaal"
 COM_BIXPRINTSHOP_BETAALDETAILS="Details betaling"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGMETHODE="Betaalmethode"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM="Datum betaling"
@@ -244,7 +246,7 @@ BIX_DELETE="Verwijderen"
 COM_BIXPRINTSHOP_BUTTON_PROFIEL="Mijn profiel"
 COM_BIXPRINTSHOP_USER_DETAILS="login gegevens"
 COM_BIXPRINTSHOP_USER_ADDRESSES="Adres informatie"
-COM_BIXPRINTSHOP_USER_PROFILE="Uw gegevens"
+COM_BIXPRINTSHOP_USER_PROFILE="Jouw persoonlijke gegevens"
 COM_BIXPRINTSHOP_BESTELLING_ID="Bestelling"
 COM_BIXPRINTSHOP_ORDER_ID="Order"
 COM_BIXPRINTSHOP_ORDER_STATUS="Orderstatus"
@@ -274,7 +276,7 @@ COM_BIXPRINTSHOP_BESTELLING_GEEN_OFFERTE="Bestelling is geen offerte, en kan nie
 COM_BIXPRINTSHOP_BESTELLING_AL_BEVESTIGD="Bestelling is al bevestigd, en kan niet opnieuw betaald worden"
 COM_BIXPRINTSHOP_OFFERTE_INGELADEN="De offerte is ingeladen en kan betaald worden"
 COM_BIXPRINTSHOP_BESTELLING_INGELADEN="De bestelling is ingeladen en kan betaald worden"
-COM_BIXPRINTSHOP_OFFERTE_NOG_GEEN_OFFERTES="U heeft nog geen offertes opgeslagen."
+COM_BIXPRINTSHOP_OFFERTE_NOG_GEEN_OFFERTES="Nog geen offertes opgeslagen"
 COM_BIXPRINTSHOP_BETAAL_BESTELLING="Betaling afronden"
 COM_BIXPRINTSHOP_HISTORIE_NOG_GEEN_BESTELLINGEN="U heeft nog geen bestellingen geplaatst."
 COM_BIXPRINTSHOP_CONFIG_MAIL_AANHEF="Aanhef gebruikers"
