--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_buckaroo.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_buckaroo.ini
@@ -47,3 +47,5 @@ COM_BIXPRINTSHOP_FACTUUR_FACTUURNUMMER="Factuurnummer"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURSTATUS="Factuurstatus"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURLINK="Factuur link"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURDATUM="Factuurdatum"
+COM_BIXPRINTSHOP_FACTUUR_FACTUURREFERENTIE="Factuurreferentie"
+COM_BIXPRINTSHOP_FACTUUR_BTWNUMMER="BTW-nummer"
