--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -230,20 +230,22 @@ COM_BIXPRINTSHOP_CONFIG_DEBUG_DEBUGADMINONLY="Debug alleen admins"
 COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_DEBUGADMINONLY_DESC="BIXPRINTSHOP CONFIG DRUKKERIJ DEBUGADMINONLY DESC"
 COM_BIXPRINTSHOP_CONFIG_DEBUG_GENDEBUG="PHP debugging"
 COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_GENDEBUG_DESC="BIXPRINTSHOP CONFIG DRUKKERIJ GENDEBUG DESC"
+COM_BIXPRINTSHOP_CONFIG_DEBUG_PRIOLEVEL="PHP debug level"
+COM_BIXPRINTSHOP_CONFIG_DEBUG_PRIOLEVEL_DESC="Meer of minder gedetailleerde informatie tonen"
 COM_BIXPRINTSHOP_CONFIG_DEBUG_JSDEBUG="Javascript debugging"
-COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_JSDEBUG_DESC="BIXPRINTSHOP CONFIG DRUKKERIJ JSDEBUG DESC"
+COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_JSDEBUG_DESC=""
 COM_BIXPRINTSHOP_CONFIG_DEBUG_PRIDEBUG="Prijsberekening"
-COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_PRIDEBUG_DESC="BIXPRINTSHOP CONFIG DRUKKERIJ PRIDEBUG DESC"
+COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_PRIDEBUG_DESC=""
 COM_BIXPRINTSHOP_CONFIG_DEBUG_CHFDEBUG="Veldcontrole"
 COM_BIXPRINTSHOP_CONFIG_DEBUG_CART="Debug winkelwagen"
 COM_BIXPRINTSHOP_CONFIG_DEBUG_CART_DESC="Debugging van winkelwagen inschakelen."
-COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_CHFDEBUG_DESC="BIXPRINTSHOP CONFIG DRUKKERIJ CHFDEBUG DESC"
+COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_CHFDEBUG_DESC=""
 COM_BIXPRINTSHOP_CONFIG_DEBUG_DEPDEBUG="Veldafhankelijkheden"
-COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_DEPDEBUG_DESC="BIXPRINTSHOP CONFIG DRUKKERIJ DEPDEBUG DESC"
+COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_DEPDEBUG_DESC=""
 COM_BIXPRINTSHOP_CONFIG_DEBUG_WIKDEBUG="Wiki woorden"
-COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_WIKDEBUG_DESC="BIXPRINTSHOP CONFIG DRUKKERIJ WIKDEBUG DESC"
+COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_WIKDEBUG_DESC=""
 COM_BIXPRINTSHOP_CONFIG_DEBUG_AFBDEBUG="Afbeeldingen"
-COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_AFBDEBUG_DESC="BIXPRINTSHOP CONFIG DRUKKERIJ AFBDEBUG DESC"
+COM_BIXPRINTSHOP_CONFIG_DRUKKERIJ_AFBDEBUG_DESC=""
 ;betalen
 COM_BIXPRINTSHOP_CONFIG_BETALEN_ACTIVE="Methode actief"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALKOSTEN="Vaste kosten gebruiker"
