--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -54,6 +54,10 @@ COM_BIXPRINTSHOP_ERROR_ORDERING_SPRF="Fout bij opslaan volgorde: %s"
 ;meldingen
 COM_BIXPRINTSHOP_ONAFGERONDE_BESTELLING_SPR="Bestelling %s is nog niet afgerond. Klik %shier%s om de bestelling af te ronden."
 COM_BIXPRINTSHOP_ONAFGERONDE_BETALING_SPR="Bestelling %s is nog niet betaald. Klik %shier%s om de bestelling te betalen."
+;debug
+COM_BIXPRINTSHOP_DEBUG_TIME_SPR="%ss"
+COM_BIXPRINTSHOP_DEBUG_FILELINE_SPR="%s, regel %s"
+
 ; categorie overzicht
 COM_BIXPRINTSHOP_PRODUCTEN_PAGEHEADER="Productoverzicht"
 
