--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.sys.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.sys.ini
@@ -1,7 +1,7 @@
 ;com_bix_printshop
 BIXPRINTSHOP="Bixie Printshop"
 COM_BIXPRINTSHOP="Bixie Printshop"
-COM_BIXPRINTSHOP_XML_DESCRIPTION="Beschrijving in taalfile"
+COM_BIXPRINTSHOP_XML_DESCRIPTION="Bixie Printshop, de online drukwerkwinkel!"
 COM_BIXPRINTSHOP_DRUKKERIJEN="Drukkerijen"
 COM_BIXPRINTSHOP_PRODUCTEN="Producten"
 COM_BIXPRINTSHOP_CATEGORIES="Categorieën"
@@ -115,4 +115,10 @@ COM_BIXPRINTSHOP_PRODUCT_MENU_PRODUCTDEFAULT_DESC="Selecteer het product dat sta
 
 BIX_MAAK_KEUZE="- Maak een keuze -"
 
+COM_BIXPRINTSHOP_INSTALL_MESSAGE="Bedankt voor het installeren van Bixie Printshop."
+COM_BIXPRINTSHOP_INSTALL_COMPLETE="Installatie gereed."
+COM_BIXPRINTSHOP_INSTALL_FOLDER_CREATED_SPR="Map %s aangemaakt."
+COM_BIXPRINTSHOP_INSTALL_FOLDER_DELETED_SPR="Map %s verwijderd."
+COM_BIXPRINTSHOP_INSTALL_FOLDER_CREATE_ERROR_SPR="Map %s aanmaken mislukt!"
+COM_BIXPRINTSHOP_INSTALL_FOLDER_DELETE_ERROR_SPR="Map %s verwijderen mislukt!."
 
