--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -49,6 +49,7 @@ BIX_YES="Ja"
 BIX_NO="Nee"
 BIX_NEW="Nieuw"
 BIX_EDIT="Bewerken"
+BIX_VIEW="Bekijken"
 BIX_CANCEL="Annuleren"
 BIX_SAVE="Opslaan"
 BIX_STANDAARD="Standaard"
@@ -826,7 +827,7 @@ COM_BIXPRINTSHOP_BESTELLING_BETALINGSTATUS="Betalingsstatus"
 COM_BIXPRINTSHOP_BESTELLING_BETAALID="Betaal ID"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM="Betaaldatum"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM_DESC=""
-COM_BIXPRINTSHOP_BESTELLING_ORDERSNETTO="Order netto"
+COM_BIXPRINTSHOP_BESTELLING_ORDERSNETTO="Orders netto"
 COM_BIXPRINTSHOP_BESTELLING_ORDERSBTW="Orders btw"
 COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEINKOOP="Administratie inkoop"
 COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEPRIJS="Administratiekosten"
@@ -848,6 +849,9 @@ COM_BIXPRINTSHOP_LEGEND_BESTELLING_FACTUREN="Facturen"
 COM_BIXPRINTSHOP_DOWNLOAD_FACTUUR="Factuur downloaden"
 COM_BIXPRINTSHOP_BESTELLING_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURADRES="Factuuradres"
+COM_BIXPRINTSHOP_BESTELLING_WIJZIG_ADRES="Wijzig adres"
+COM_BIXPRINTSHOP_BESTELLING_EERDERE_FACTUREN="Eerdere facturen"
+COM_BIXPRINTSHOP_BESTELLING_HUIDIGE_FACTUUR="Huidige factuur"
 FACTUUR_INITIEEL="Initiëel"
 FACTUUR_RESERVERING="Reservering"
 FACTUUR_CREDITFACTUUR="Credit"
