--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -839,6 +839,8 @@ COM_BIXPRINTSHOP_BESTELLING_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELTYPE="Bestelling type"
 BESTEL_INTERN="Intern"
+COM_BIXPRINTSHOP_BESTELLING_PARAMS_FACTUURREFERENTIE="Factuurreferentie"
+COM_BIXPRINTSHOP_BESTELLING_PARAMS_FACTUURREFERENTIE_DESC="Vermeld hier uw eigen referentie zoals bijvoorbeeld inkoopnummer of klantnaam"
 COM_BIXPRINTSHOP_LEGEND_BESTELLING_DETAILS="Bestellingdetails"
 COM_BIXPRINTSHOP_LEGEND_BETALINGHISTORIE="Betalingshistorie"
 COM_BIXPRINTSHOP_LEGEND_BETALING="Betalingdetails"
