--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -1023,6 +1023,8 @@ COM_BIXPRINTSHOP_ORDER_LOCKCALC="Blokkeer calculatie"
 COM_BIXPRINTSHOP_ORDER_LOCKCALC_DESC="Voorkom dat de order opnieuw gecalculeerd wordt."
 COM_BIXPRINTSHOP_ORDER_LOCKINKOOPCALC="Blokkeer inkoopcalculatie"
 COM_BIXPRINTSHOP_ORDER_LOCKINKOOPCALC_DESC="Voorkom dat de order opnieuw gecalculeerd wordt."
+COM_BIXPRINTSHOP_ORDER_RECALC="Herberekenen"
+COM_BIXPRINTSHOP_ORDER_RECALCULATED="Order opnieuw gecalculeerd"
 
 COM_BIXPRINTSHOP_LEGEND_ORDER_DETAILS="Orderdetails"
 COM_BIXPRINTSHOP_LEGEND_ORDER_STATUS="Order status"
