--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -44,6 +44,14 @@ COM_BIXPRINTSHOP_INVALID_KVK="KvK-nummer niet geldig"
 COM_BIXPRINTSHOP_INVALID_BTW="BTW-nummer niet geldig"
 COM_BIXPRINTSHOP_UNKNOWN_BTW="BTW-nummer niet geregistreerd"
 COM_BIXPRINTSHOP_VALID_BTW="BTW-nummer geregistreerd op bedrijf %s. Adres: %s"
+;configcheck
+COM_BIXPRINTSHOP_CHECKCONFIG_REPAIR="Herstellen"
+COM_BIXPRINTSHOP_CHECKCONFIG_MENUITEM_DOWNLOAD="Download-menuitem bestaat niet! Selecteer (verborgen) menu om deze in aan te maken."
+COM_BIXPRINTSHOP_CHECKCONFIG_MENUITEM_NOTE="Automatisch aangemaakt door Bixie Printshop"
+COM_BIXPRINTSHOP_CHECKCONFIG_MENUITEM_CREATED_SPR="Menu-item %s succesvol aangemaakt."
+COM_BIXPRINTSHOP_DOWNLOAD_MENUITEMNAME="Download"
+COM_BIXPRINTSHOP_DOWNLOAD_MENUITEMALIAS="download"
+COM_BIXPRINTSHOP_CHECKCONFIG_PARAMS_NOTSET="Component-parameters zijn nog niet opgeslagen."
 ;*;algemeen
 BIX_YES="Ja"
 BIX_NO="Nee"
