view user en install

--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.sys.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.sys.ini
@@ -99,6 +99,7 @@ COM_BIXPRINTSHOP_USERHISTORIE_VIEW_DEFAULT_OPTION="Bestelhistorie"
 COM_BIXPRINTSHOP_USERHISTORIE_MENU_DEFAULT="Bestelhistorie pagina"
 COM_BIXPRINTSHOP_USERHISTORIE_MENU_DEFAULT_DESC="Bestelhistorie pagina."
 
+COM_BIXPRINTSHOP_USER_VIEW_DEFAULT_TITLE="Gebruikersgegevens"
 COM_BIXPRINTSHOP_USEROFFERTES_VIEW_DEFAULT_TITLE="Gebruikers offertes"
 COM_BIXPRINTSHOP_USER_MENU_USEROFFERTES="Gebruikers offertes"
 COM_BIXPRINTSHOP_USER_MENU_USEROFFERTES_DESC="Inzien offertes voor gebruikers"
@@ -112,7 +113,6 @@ COM_BIXPRINTSHOP_PRODUCT_MENU_PRODUCT_DESC="Selecteer het product dat weergegeve
 COM_BIXPRINTSHOP_PRODUCT_MENU_PRODUCTDEFAULT="Standaardproduct"
 COM_BIXPRINTSHOP_PRODUCT_MENU_PRODUCTDEFAULT_DESC="Selecteer het product dat standaard weergegeven moeten worden."
 
-
 BIX_MAAK_KEUZE="- Maak een keuze -"
 
 COM_BIXPRINTSHOP_INSTALL_MESSAGE="Bedankt voor het installeren van Bixie Printshop."
@@ -121,4 +121,4 @@ COM_BIXPRINTSHOP_INSTALL_FOLDER_CREATED_SPR="Map %s aangemaakt."
 COM_BIXPRINTSHOP_INSTALL_FOLDER_DELETED_SPR="Map %s verwijderd."
 COM_BIXPRINTSHOP_INSTALL_FOLDER_CREATE_ERROR_SPR="Map %s aanmaken mislukt!"
 COM_BIXPRINTSHOP_INSTALL_FOLDER_DELETE_ERROR_SPR="Map %s verwijderen mislukt!."
-
+COM_BIXPRINTSHOP_INSTALL_FOLDER_CREATE_EXIST_SPR="Map %s bestaat al."
