--- a/administrator/language/nl-NL/nl-NL.mod_bps_orders.sys.ini
+++ b/administrator/language/nl-NL/nl-NL.mod_bps_orders.sys.ini
@@ -2,3 +2,6 @@
 MOD_BPS_ORDERS="Bixie Printship laatste orders"
 MOD_BPS_ORDERS_XML_DESCRIPTION="Deze module toont een lijst van de meest recent geplaatste orders in de Bixie Printshop"
 MOD_BPS_ORDERS_LAYOUT_DEFAULT="Standaard"
+
+MOD_BPS_ORDERS_ERROR_CPANEL_SPR="Fout bij toevoegen aan controlpanel: %s"
+MOD_BPS_ORDERS_INSTALL_SUCCES="Modules geïnstalleerd!"
