--- a/administrator/language/nl-NL/nl-NL.mod_bps_stats.sys.ini
+++ b/administrator/language/nl-NL/nl-NL.mod_bps_stats.sys.ini
@@ -2,3 +2,6 @@
 MOD_BPS_STATS="Bixie Printshop Statistieken"
 MOD_BPS_STATS_XML_DESCRIPTION="Deze module toont statistieken van verkoop via Bixie Printshop"
 MOD_BPS_STATS_LAYOUT_DEFAULT="Standaard"
+
+MOD_BPS_STATS_ERROR_CPANEL_SPR="Fout bij toevoegen aan controlpanel: %s"
+MOD_BPS_STATS_INSTALL_SUCCES="Module geïnstalleerd!"
