--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -878,6 +878,9 @@ COM_BIXPRINTSHOP_TRANSACTIELOG_MESSAGE="Gebruikers bericht"
 COM_BIXPRINTSHOP_TRANSACTIELOG_SUCCES="Request geslaagd"
 COM_BIXPRINTSHOP_TRANSACTIELOG_VALID="Transactie valide"
 COM_BIXPRINTSHOP_TRANSACTIELOG_TYPE="Request type"
+COM_BIXPRINTSHOP_TRANSACTIELOG_CREATED="Log datum"
+COM_BIXPRINTSHOP_TRANSACTIELOG_REQUEST="Requestinformatie"
+COM_BIXPRINTSHOP_TRANSACTIELOG_PLUGINRESPONSE="Reactie plugin"
 
 COM_BIXPRINTSHOP_STATUS_STATUSCONFIRMED="Bevestigd"
 COM_BIXPRINTSHOP_STATUS_STATUSCONFIRMED_DESC=""
@@ -935,9 +938,13 @@ COM_BIXPRINTSHOP_DRUKVEL_BREEDTE="Drukvel breedte"
 COM_BIXPRINTSHOP_DRUKVEL_BREEDTE_DESC=""
 COM_BIXPRINTSHOP_DRUKVEL_HOOGTE="Drukvel hoogte"
 COM_BIXPRINTSHOP_DRUKVEL_HOOGTE_DESC=""
+
+COM_BIXPRINTSHOP_LEGEND_TRANSACTIES="Transactielog"
+COM_BIXPRINTSHOP_LEGEND_FACTUURINFO="Informatie"
 COM_BIXPRINTSHOP_FACTUUR_ID="Factuur ID"
 COM_BIXPRINTSHOP_FACTUUR_BESTELID="Bestelling ID"
 COM_BIXPRINTSHOP_FACTUUR_ADRESID="Adres ID"
+COM_BIXPRINTSHOP_FACTUUR_USERID="User ID"
 COM_BIXPRINTSHOP_FACTUUR_CREDITID="Credit ID"
 COM_BIXPRINTSHOP_FACTUUR_EXTERNID="Extern ID"
 COM_BIXPRINTSHOP_FACTUUR_BETAALID="Betaal ID"
@@ -962,9 +969,16 @@ COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
 COM_BIXPRINTSHOP_CREEER_FACTUUR="Nieuwe factuur maken"
 COM_BIXPRINTSHOP_BESTELLING_FACTUUR_VERSCHIL="Verschil tussen bestelbedrag en factuurbedrag!"
-
+COM_BIXPRINTSHOP_FACTUUR_KLANTNAAM="Klantnaam"
+COM_BIXPRINTSHOP_FACTUUR_DEBITEURNUMMER="Debiteurnummer"
+COM_BIXPRINTSHOP_FACTUUR_ADRES="Factuuradres"
+COM_BIXPRINTSHOP_FACTUUR_DEF="Definitief"
 COM_BIXPRINTSHOP_FACTUURREDEN_RESERVERING="Aanmaken factuurnummer"
 COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
+COM_BIXPRINTSHOP_FACTUUR_NIETGEMAAKT="Factuur-pdf nog niet aangemaakt"
+COM_BIXPRINTSHOP_FACTUUR_HUIDIGEBESTELSTATUS="Huidige bestelstatus"
+COM_BIXPRINTSHOP_FACTUUR_HUIDIGEBETAALSTATUS="Huidige betaalstatus"
+COM_BIXPRINTSHOP_FACTUUR_HUIDIGEBETAALMETHODE="Huidige betaalmethode"
 
 COM_BIXPRINTSHOP_ORDER_TOTAALNETTO="Order totaal netto"
 COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal btw"
@@ -1036,6 +1050,7 @@ COM_BIXPRINTSHOP_LEGEND_ORDER_COMMUNICATIE="Communicatie"
 COM_BIXPRINTSHOP_LEGEND_COMMUNICATIE_KLANT="Klant"
 COM_BIXPRINTSHOP_LEGEND_COMMUNICATIE_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_ORDER_NAARBESTELLING="Naar bestelling"
+COM_BIXPRINTSHOP_ORDER_NAARFACTUUR="Naar factuur"
 COM_BIXPRINTSHOP_ORDER_NAARUSER="Naar gebruiker"
 COM_BIXPRINTSHOP_ORDER_MARGE_TOTAAL="Totale marge"
 COM_BIXPRINTSHOP_ORDER_MARGE_PLANO="Marge planoprijs"
