--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -210,6 +210,8 @@ COM_BIXPRINTSHOP_CART_KORTING_PLACEHOLDER="Uw kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_DESC="Voer uw kortingscode in"
 COM_BIXPRINTSHOP_CART_KORTING_INFO_TITLE="Korting via een couponcode"
 COM_BIXPRINTSHOP_ORDER_ORDERNETTO="Totaalbedrag netto"
+COM_BIXPRINTSHOP_BESTELLING_PARAMS_FACTUURREFERENTIE="Uw referentie"
+COM_BIXPRINTSHOP_BESTELLING_PARAMS_FACTUURREFERENTIE_DESC="De referentie die op de factuur verschijnt"
 ;statussen
 BIX_SUCCESS="Voltooid"
 BIX_FAILURE="Betaalrequest mislukt"
