--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_machinecalc.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_machinecalc.ini
@@ -39,6 +39,8 @@ COM_BIXPRINTSHOP_PLG_MACHINECALC_AFWERKMARGEAFWERK="Verkoopmarge afwerking"
 COM_BIXPRINTSHOP_PLG_MACHINECALC_AFWERKMARGEAFWERK_DESC="Geef aan welke marge aangehouden moet worden voor de afwerking. Let op, deze marge overschrijft de drukkerijmarge en productinstellingen."
 COM_BIXPRINTSHOP_PLG_MACHINECALC_ATTRIBMARGEBESTELLING="Verkoopmarge optie"
 COM_BIXPRINTSHOP_PLG_MACHINECALC_ATTRIBMARGEBESTELLING_DESC="Geef aan welke marge op deze optie wordt gerekend. Deze marge overschrijft alle eerder ingestelde marges"
-
+COM_BIXPRINTSHOP_PLG_MACHINECALC_COLORATTRIBTYPE="Type kleuroptie"
+COLORATTRIBTYPE_COLOR="Enkelvoudige kleuroptie"
+COLORATTRIBTYPE_MULTICOLOR="Multi kleuroptie"
 COM_BIXPRINTSHOP_PLG_MACHINECALC_APARTGRAMMAGE="Losse grammage-optie?"
 COM_BIXPRINTSHOP_PLG_MACHINECALC_APARTGRAMMAGE_DESC="Gebruik een aparte optie om grammage met papier te combineren."
