--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -73,6 +73,7 @@ COM_BIXPRINTSHOP_BTW_SPR="%s BTW"
 BIX_AANTAL_STUKS="Aantal stuks"
 COM_BIXPRINTSHOP_BTW="BTW"
 COM_BIXPRINTSHOP_NU="Nu"
+COM_BIXPRINTSHOP_BESTELLEN="Bestellen"
 COM_BIXPRINTSHOP_ADVIESPRIJS="Adviesprijs"
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's"
