--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
@@ -36,6 +36,7 @@ COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_SUCCESS="Betaling succesvol aangevraagd."
 COM_BIXPRINTSHOP_BETALING_MISLUKT="Betaling mislukt."
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_TRANSFERSUCCESS="Het verzoek tot overschrijving is succesvol geregistreerd bij onze betaalprovider Buckaroo. Je ontvangt straks een mail met betaalinstructies."
 
+BIX_PLUGIN_BUCKAROO_REMINDER_SPR="Aanmaning %s verstuurd"
 BIX_PLUGIN_BUCKAROO_BETAALRETURN_SPR="Returnpost van Buckaroo: bestelID %s, betaalID %s"
 BIX_PLUGIN_BUCKAROO_PUSHBERICHT_SPR="Pushbericht van Buckaroo: bestelID %s, betaalID %s"
 BIX_PLUGIN_BUCKAROO_INVALID_RESPONS="Ongeldige respons"
