--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_bix_ideal.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_bix_ideal.ini
@@ -89,6 +89,9 @@ COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_SELECT_BANK="Selecteer hieronder uw bank. (Ned
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_KOSTEN_SPR="Hiervoor worden E %s administratiekosten gerekend."
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_PREPARED="Betaling met iDEAL is aangevraagd."
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_SUCCESS="Betaling met iDEAL geslaagd!"
+COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_PENDING="Betaling met iDEAL nog in verwerking"
+COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_CANCELLED="Betaling met iDEAL geannuleerd"
+COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_FAILURE="Betaling met iDEAL mislukt!"
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_BETAALINFO_INCOMPLEET="Betaalinformatie is incompleet!"
 
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BIX_IDEAL_STAT_SUCCESS="Status bij succes"
