--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -920,6 +920,11 @@ BIX_PSD="Psd bestand"
 BIX_EPS="Eps bestand"
 BIX_JPG="Jpg bestand"
 BIX_PNG="Png bestand"
+BIX_DOC="Doc bestand"
+BIX_DOCX="Docx bestand"
+BIX_XLS="Xls bestand"
+BIX_XLSX="Xlsx bestand"
+BIX_CSV="Csv bestand"
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_SIZELIMIT="Maximale bestandsgrootte"
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_SIZELIMIT_DESC=""
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_HIDEDROPZONES="Verberg uploadkader"
