--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo_transfer.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo_transfer.ini
@@ -27,3 +27,4 @@ REMINDER_3_REMINDER="Stuur 3 herinneringen"
 REMINDER_3_REMINDER_INCASSO="Stuur 3 herinneringen en naar incasso"
 
 BIX_SUCCESS="Betaling succesvol"
+BIX_BETALING_VERWACHT="Betaling verwacht"
