--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_rekening.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_rekening.ini
@@ -4,6 +4,7 @@
 COM_BIXPRINTSHOP_PLG_REKENING_DESCR="Mogelijkheid tot betalen op rekening."
 
 TEXT_REKENING="Op rekening"
+BIX_BETALING_VERWACHT="Betaling verwacht"
 COM_BIXPRINTSHOP_PLUGIN_TITLE_OP_REKENING="Op rekening"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_MINAMOUNT="Minimaal bedrag"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_MINAMOUNT_DESC="Minimale toegestane bedrag voor betalen op rekening. Kan worden overschreven in gebruikersinstellingen."
@@ -13,6 +14,13 @@ ALLOWED_ALL="Iedereen"
 ALLOWED_COMP="Alleen gebruikers met bedrijfsinformatie"
 ALLOWED_APPR="Alleen gebruikers met goedkeuring van admin"
 ALLOWED_COMPAPPR="Alleen gebruikers met goedkeuring van admin en bedrijfsinformatie"
+COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_STAT_SUCCESS="Status bij betaling voldaan"
+COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_STAT_VERWACHT="Status bij afwachten klantbetaling"
+COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_STAT_FAILURE="Status bij mislukken"
+COM_BIXPRINTSHOP_PLUGIN_BETALEN_PARAM_ALLOWED="Toegestaan voor"
+COM_BIXPRINTSHOP_PLUGIN_BETALEN_PARAM_ALLOWED_DESC="Geef aan welke gebruikersgroep(en) deze betaling mogen gebruiken"
+
+
 
 COM_BIXPRINTSHOP_PLUGIN_REKENING_TITLE_CHECKOUT="Op rekening"
 COM_BIXPRINTSHOP_PLUGIN_REKENING_DESC_CHECKOUT="Betaal op rekening en ontvang een factuur."
@@ -22,5 +30,6 @@ COM_BIXPRINTSHOP_PLUGIN_REKENING_KOSTEN_SPR="Hiervoor wordt %s aan administratie
 
 COM_BIXPRINTSHOP_PLUGIN_REKENING_PREPARED="Betaling succesvol aangevraagd."
 COM_BIXPRINTSHOP_PLUGIN_REKENING_SUCCESS="Betaling succesvol verwerkt."
+COM_BIXPRINTSHOP_PLUGIN_REKENING_FAIL="Fout bij verwerking rekening."
 COM_BIXPRINTSHOP_PLUGIN_REKENING_INVOICEMESS_SPR="Gelieve het volledige bedrag over te maken op rekening %s, t.n.v. %s."
 COM_BIXPRINTSHOP_PLUGIN_REKENING_NIET_TOEGESTAAN="Deze betaalmethode is niet toegestaan. Neem contact op met de klantenservice."
