--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -196,6 +196,10 @@ COM_BIXPRINTSHOP_CONFIG_MAIL_PDF_FACTUUR_COLORMESSAGE="Kleur betaalinformatie"
 ;algemeen
 COM_BIXPRINTSHOP_CONFIG_SITEPREFIX="Site prefix"
 COM_BIXPRINTSHOP_CONFIG_SITEPREFIX_DESC="De prefix is verplicht voor de site. Deze bepaalt layout en instellingen van het systeem. NIET WIJZIGEN"
+COM_BIXPRINTSHOP_CONFIG_TEMPLATETYPE="Templatetype"
+COM_BIXPRINTSHOP_CONFIG_TEMPLATETYPE_DESC="Het templatesysteem waar de Printshop op draait"
+BIX_WARP6="YOOtheme Warp 6"
+BIX_WARP7="YOOtheme Warp 7"
 COM_BIXPRINTSHOP_CONFIG_SITEPREFIX_MESS="De prefix is verplicht voor de site!"
 COM_BIXPRINTSHOP_CONFIG_ANALYTICSCODE="Google Analytics code"
 COM_BIXPRINTSHOP_CONFIG_ANALYTICSCODE_DESC="De code (UA-xxxxx) die benodigd is voor Googla Analytics tbv doorgeven bestellingen naar E-Commerce overzicht"
@@ -639,6 +643,8 @@ COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_ORIG="Originele grootte"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_X_PX="Producticoon %d px"
 COM_BIXPRINTSHOP_PRODUCTEN_METATITLE="Meta titel"
 COM_BIXPRINTSHOP_PRODUCTEN_METADESCR="Meta beschrijving"
+COM_BIXPRINTSHOP_PRODUCTEN_SUBTITLE="Subtitel"
+COM_BIXPRINTSHOP_PRODUCTEN_SUBTITLE_DESC="Zichtbaar in productoverzicht"
 COM_BIXPRINTSHOP_PRODUCTEN_METAKEYWORDS="Meta keywords"
 COM_BIXPRINTSHOP_PRODUCTEN_PRODUCTDESCR="Productbeschrijving"
 COM_BIXPRINTSHOP_PRODUCTEN_PRODUCTDESCR_BOT="Productbeschrijving bottom"
