--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzameltabel.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzameltabel.ini
@@ -17,6 +17,8 @@ COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_VOLLEDIGEOPLAGE_DESC="Als alleen de oplage no
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_MACHINTYPES="Toon prijzen voor"
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_HIDEOPLAGES="Filter de oplages"
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_HIDEOPLAGES_DESC="Verberg een aantal oplages en toon de meer/minder oplages knop"
+COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_TEMPLATE="Template"
+COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_TEMPLATE_DESC="Kies de template van de plugin"
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_DISABLEDSTYLE="Weergave onmogelijke opties"
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_TYPEDRUK="Type machine"
 TYPEDRUK_DIGITAAL="Digitaal"
