--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -100,15 +100,15 @@ COM_BIXPRINTSHOP_ADRES_NAAM="Naam"
 COM_BIXPRINTSHOP_ADRES_NAAM_DESC="Geef uw volledige naam op"
 COM_BIXPRINTSHOP_ADRES_TAV="t.a.v."
 COM_BIXPRINTSHOP_ADRES_TAV_DESC="Geef eventueel een 'ter attentie van' naam op voor dit adres"
-COM_BIXPRINTSHOP_ADRES_ALIAS="Alias"
-COM_BIXPRINTSHOP_ADRES_ALIAS_DESC="Geen een unieke naam op waaronder dit adres bekend is"
+COM_BIXPRINTSHOP_ADRES_ALIAS="Adres-alias"
+COM_BIXPRINTSHOP_ADRES_ALIAS_DESC="Geef een unieke naam op waaronder dit adres bekend is"
 COM_BIXPRINTSHOP_ADRES_PLAATS="Plaats"
 COM_BIXPRINTSHOP_ADRES_POSTCODE="Postcode"
 COM_BIXPRINTSHOP_ADRES_HUISNUMMER="Huisnr"
 COM_BIXPRINTSHOP_ADRES_HUISNUMMER_TOEVOEGING="Toevoeging"
 COM_BIXPRINTSHOP_ADRES_INFORMATIE="Extra informatie"
 COM_BIXPRINTSHOP_ADRES_LAND="Land"
-COM_BIXPRINTSHOP_ADRES_STRAAT="Straat"
+COM_BIXPRINTSHOP_ADRES_STRAAT="Adres"
 COM_BIXPRINTSHOP_ADRES_TELEFOON="Telefoon"
 COM_BIXPRINTSHOP_ADRES_TELEFOON_DESC="Geef een telefoonnumer op waar de transporteur eventueel contact mee op kan nemen"
 COM_BIXPRINTSHOP_VERZENDENFACTURADRES="Verzend- en factuuradres"
@@ -137,6 +137,7 @@ COM_BIXPRINTSHOP_CARTBRUTO="Bedrag bestelling"
 COM_BIXPRINTSHOP_CARTBTW="BTW bedrag bestelling"
 COM_BIXPRINTSHOP_CART_IS_EMPTY="Winkelwagen is nog leeg."
 COM_BIXPRINTSHOP_TO_CHECKOUT="Verder naar betaling"
+COM_BIXPRINTSHOP_TO_CART="Naar winkelwagen"
 COM_BIXPRINTSHOP_BUTTON_PRODUCTENOVERZICHT="Productoverzicht"
 COM_BIXPRINTSHOP_EMPTY_CART="Winkelwagen legen"
 COM_BIXPRINTSHOP_OPSLAANOFFERTE="Opslaan als offerte"
@@ -245,8 +246,9 @@ BIX_DOWNLOAD="Downloaden"
 BIX_DELETE="Verwijderen"
 
 ; Profiel
+COM_BIXPRINTSHOP_USER_GEEN_TOEGANG="Geen toegang tot dit profiel"
 COM_BIXPRINTSHOP_BUTTON_PROFIEL="Mijn profiel"
-COM_BIXPRINTSHOP_USER_DETAILS="login gegevens"
+COM_BIXPRINTSHOP_USER_DETAILS="Login gegevens"
 COM_BIXPRINTSHOP_USER_ADDRESSES="Adres informatie"
 COM_BIXPRINTSHOP_USER_PROFILE="Uw gegevens"
 COM_BIXPRINTSHOP_BESTELLING_ID="Bestelling"
@@ -284,6 +286,7 @@ COM_BIXPRINTSHOP_HISTORIE_NOG_GEEN_BESTELLINGEN="U heeft nog geen bestellingen g
 COM_BIXPRINTSHOP_CONFIG_MAIL_AANHEF="Aanhef gebruikers"
 BIX_FORMEEL="Formeel"
 BIX_INFORMEEL="Informeel"
+COM_BIXPRINTSHOP_PUBLISH_SUCCESS="Item succesvol gepubliceerd"
 
 ; Volgense / Vorige knoppen
 COM_BIXPRINTSHOP_BUTTON_VORIGE="Vorige pagina"
