--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzameltabel.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzameltabel.ini
@@ -36,7 +36,7 @@ COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_VERW_LEVERDATUM="Verwachte leverdatum"
 ;persoonlijk
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_DIGITAALPERS="Full color digitaal"
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_DIGITAALPERS_TITLE="Full color digitaal"
-COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_DIGITAALPERS_DESC="Bij Drukhetnu beschikken we over verschillende persen. Van digitale persen die geschikt zijn voor kleine oplages, tot grootformaat persen voor offset drukwerk en signporoducten.<br/>
+COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_DIGITAALPERS_DESC="Wij beschikken over verschillende persen. Van digitale persen die geschikt zijn voor kleine oplages, tot grootformaat persen voor offset drukwerk en signporoducten.<br/>
 <strong>Digitaal drukwerk</strong><br/>
 We hebben de beschikking over 6 HP Indigo 5000 en 5500 digitale persen. Met de snelheid van een printer maken we drukwerk met offset kwaliteit. Je hebt dus supersnel de hoogste kwaliteit digitaal drukwerk in huis.<br/>
 <strong>De voordelen:</strong><br/>
@@ -50,7 +50,7 @@ We hebben de beschikking over 6 HP Indigo 5000 en 5500 digitale persen. Met de s
 Ook voor deze producten hebben we een heel machinepark staan. Van machines die met UV-inkten printen tot machines die platen, doeken, folie en papier frezen, snijden en rillen."
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_OFFSETPERS="Full color offset"
 COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_OFFSETPERS_TITLE="Full color offset"
-COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_OFFSETPERS_DESC="Bij Drukhetnu beschikken we over verschillende persen. Van digitale persen die geschikt zijn voor kleine oplages, tot grootformaat persen voor offset drukwerk en signporoducten.<br/>
+COM_BIXPRINTSHOP_PLG_VERZAMELTABEL_OFFSETPERS_DESC="Wij beschikken over verschillende persen. Van digitale persen die geschikt zijn voor kleine oplages, tot grootformaat persen voor offset drukwerk en signporoducten.<br/>
 <strong>Offset drukwerk</strong><br/>
 Naast onze digitale persen, beschikken we over een aantal groot formaat Komori persen:
 <ul>
