--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -266,6 +266,7 @@ COM_BIXPRINTSHOP_BESTELLING_FACTUURGEGEVENS="Factuurgegevens"
 COM_BIXPRINTSHOP_BESTELLING_BESTELUMMER="Bestelling "
 COM_BIXPRINTSHOP_BESTELLING_DETAILS="Bestellingdetails"
 COM_BIXPRINTSHOP_TITLE_OFFERTEDETAILS="Offertedetails"
+COM_BIXPRINTSHOP_OFFERTE_PRODUCTNAAM="Productnaam"
 COM_BIXPRINTSHOP_OFFERTE_ID="Offertenummer"
 COM_BIXPRINTSHOP_OFFERTE_BESTELID="Offertenummer"
 COM_BIXPRINTSHOP_OFFERTE_BESTELUMMER="Offerte #"
