--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -262,6 +262,7 @@ COM_BIXPRINTSHOP_BESTELLING_DATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BETAALMETHODE="Betaalmethode"
 COM_BIXPRINTSHOP_BESTELLING_BETAALDATUM="Betaaldatum"
 COM_BIXPRINTSHOP_BESTELLING_STATUS="Bestellingstatus"
+COM_BIXPRINTSHOP_BESTELLING_BETAALGEGEVENS="Betalingdetails"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURGEGEVENS="Factuurgegevens"
 COM_BIXPRINTSHOP_BESTELLING_BESTELUMMER="Bestelling "
 COM_BIXPRINTSHOP_BESTELLING_DETAILS="Bestellingdetails"
