--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -289,6 +289,7 @@ COM_BIXPRINTSHOP_CONFIG_MAIL_AANHEF="Aanhef gebruikers"
 BIX_FORMEEL="Formeel"
 BIX_INFORMEEL="Informeel"
 COM_BIXPRINTSHOP_PUBLISH_SUCCESS="Item succesvol gepubliceerd"
+COM_BIXPRINTSHOP_USER_SAVED="Profiel opgeslagen"
 
 ; Volgense / Vorige knoppen
 COM_BIXPRINTSHOP_BUTTON_VORIGE="Vorige pagina"
