--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
@@ -20,9 +20,10 @@ COM_BIXPRINTSHOP_FACTUUR_CREDITNOTA_DESCR="Dit betreft een creditering"
 COM_BIXPRINTSHOP_FACTUUR_CREDITTITLE="Creditnota"
 FACTUUR_INITIEEL="Initiëel"
 FACTUUR_RESERVERING="Reservering"
-FACTUUR_CREDIT="Credit"
+FACTUUR_CREDITFACTUUR="Creditfactuur"
 FACTUUR_GECREDITEERD="Gecrediteerd"
 FACTUUR_NULL="Nul-factuur"
+FACTUUR_DRAFT="Tijdelijke factuur"
 ;factuurtemplate
 COM_BIXPRINTSHOP_FACTUUR_TITLE="Factuur"
 COM_BIXPRINTSHOP_FACTUUR_BETREFT="Betreft"
