bestelid in templ lang

--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
@@ -29,6 +29,7 @@ COM_BIXPRINTSHOP_FACTUUR_TITLE="Factuur"
 COM_BIXPRINTSHOP_FACTUUR_BETREFT="Betreft"
 COM_BIXPRINTSHOP_FACTUUR_TITLE_SPR="Factuur van %s"
 COM_BIXPRINTSHOP_FACTUUR_SUBJECT_SPR="Bestelling %s bij %s"
+COM_BIXPRINTSHOP_FACTUUR_BESTELID="Bestelling ID"
 COM_BIXPRINTSHOP_FACTUUR_FACTNUMMER="Factuurnummer"
 COM_BIXPRINTSHOP_FACTUUR_FACTDATUM="Factuurdatum"
 COM_BIXPRINTSHOP_FACTUUR_KOLOM_PRODUCT="Productomschrijving"
