--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -268,6 +268,10 @@ COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALVARKOSTEN="Variabele kosten gebruiker"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALVARKOSTEN_DESC="Percentage van de factuurprijs die bij de gebruiker in rekening wordt gebracht bij gebruik van deze betaalmethode (ex. BTW)"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_DEBUG="Debug"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_DEBUG_DESC="Toon debug-informatie bij betaalmethode"
+COM_BIXPRINTSHOP_CONFIG_BETALEN_ALLOWREDRAW_INVOICE="Facturen opnieuw maken"
+COM_BIXPRINTSHOP_CONFIG_BETALEN_ALLOWREDRAW_INVOICE_DESC="Is het voor deze betaalmethode toegestaan om gemaakt facturen van factuurbedrag te veranderen na aanvraag betaling?"
+COM_BIXPRINTSHOP_CONFIG_BETALEN_ALLOW_NEW_INVOICE="Nieuwe facturen aanmelden"
+COM_BIXPRINTSHOP_CONFIG_BETALEN_ALLOW_NEW_INVOICE_DESC="Is het voor deze betaalmethode toegestaan om nieuwe facturen toe te voegen aan de bestelling (vnml tbv creditmanagement)"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALINKOOP="Vaste inkoopkosten"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALINKOOP_DESC="Vaste kosten die als inkoopkosten worden berekend bij de bestelling"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALVARINKOOP="Variabele inkoopkosten"
@@ -866,16 +870,19 @@ COM_BIXPRINTSHOP_DOWNLOAD_FACTUUR="Factuur downloaden"
 COM_BIXPRINTSHOP_BESTELLING_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURADRES="Factuuradres"
 COM_BIXPRINTSHOP_BESTELLING_WIJZIG_ADRES="Wijzig adres"
-COM_BIXPRINTSHOP_BESTELLING_EERDERE_FACTUREN="Eerdere facturen"
+COM_BIXPRINTSHOP_BESTELLING_FACTUREN="Alle facturen van bestelling"
 COM_BIXPRINTSHOP_BESTELLING_HUIDIGE_FACTUUR="Huidige factuur"
 FACTUUR_INITIEEL="Initiëel"
 FACTUUR_RESERVERING="Reservering"
-FACTUUR_CREDITFACTUUR="Credit"
+FACTUUR_CREDITFACTUUR="Creditfactuur"
 FACTUUR_GECREDITEERD="Gecrediteerd"
+FACTUUR_NULL="Nul-factuur"
+FACTUUR_DRAFT="Tijdelijke factuur"
 COM_BIXPRINTSHOP_FACTUUR_AANGEMAAKT="Factuur aangemaakt"
 COM_BIXPRINTSHOP_FACTUUR_GECREDITEERD="Factuur gecrediteerd"
 ORDERTYPE_INTERN="Ordertype intern"
 ORDERTYPE_EXTERN="Ordertype extern"
+COM_BIXPRINTSHOP_BESTELLING_CANCEL="Bestelling annuleren"
 ;transactielog
 COM_BIXPRINTSHOP_TRANSACTIELOG_ID="Log-id"
 COM_BIXPRINTSHOP_TRANSACTIELOG_BESTELID="Bestelling ID"
@@ -985,19 +992,31 @@ COM_BIXPRINTSHOP_FACTUUR_GROEP5="Factuurgroep 5"
 COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
+COM_BIXPRINTSHOP_FACTUUR_LOCKED="Definitief"
+COM_BIXPRINTSHOP_FACTUUR_LOCKED_DESC="Factuur is definitief en kan niet meer bewerkt worden."
+COM_BIXPRINTSHOP_AANMAKEN_FACTUUR="Factuur aanmaken"
+COM_BIXPRINTSHOP_AANMAKEN_FACTUUR_DESC="De factuur was nog niet aangemaakt. De factuur wordt aangemaakt met het huidige bestelbedrag en -adres."
 COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
+COM_BIXPRINTSHOP_CREDITEER_FACTUUR_DESC="Er wordt een creditfactuur gemaakt van de hiudige factuur met het bestelbedrag en -adres van de huidige factuur."
 COM_BIXPRINTSHOP_CREEER_FACTUUR="Nieuwe factuur maken"
+COM_BIXPRINTSHOP_CREEER_FACTUUR_DESC="Er wordt een nieuwe factuur gemaakt met het huidige bestelbedrag en -adres."
+COM_BIXPRINTSHOP_DRAW_FACTUUR="Factuur opnieuw maken"
+COM_BIXPRINTSHOP_DRAW_FACTUUR_DESC="De huidige factuur wordt opnieuw gemaakt met het huidige bestelbedrag en -adres. !!PAS OP!! de factuur kan al verwerkt zijn door de klant, en een wijziging is dan niet mogelijk!!"
 COM_BIXPRINTSHOP_BESTELLING_FACTUUR_VERSCHIL="Verschil tussen bestelbedrag en factuurbedrag!"
+COM_BIXPRINTSHOP_USE_FACTUUR_PLUGIN="Gebruik betaal-plugin"
+COM_BIXPRINTSHOP_USE_FACTUUR_PLUGIN_DESC="Gebruik de betaalplugin om de nieuwe factuur aan te melden bij de betaalprovider."
 COM_BIXPRINTSHOP_FACTUUR_KLANTNAAM="Klantnaam"
 COM_BIXPRINTSHOP_FACTUUR_DEBITEURNUMMER="Debiteurnummer"
 COM_BIXPRINTSHOP_FACTUUR_ADRES="Factuuradres"
 COM_BIXPRINTSHOP_FACTUUR_DEF="Definitief"
+COM_BIXPRINTSHOP_FACTUURREDEN_REDRAWN="Factuur opnieuw gemaakt door admin"
 COM_BIXPRINTSHOP_FACTUURREDEN_RESERVERING="Aanmaken factuurnummer"
 COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
 COM_BIXPRINTSHOP_FACTUUR_NIETGEMAAKT="Factuur-pdf nog niet aangemaakt"
 COM_BIXPRINTSHOP_FACTUUR_HUIDIGEBESTELSTATUS="Huidige bestelstatus"
 COM_BIXPRINTSHOP_FACTUUR_HUIDIGEBETAALSTATUS="Huidige betaalstatus"
 COM_BIXPRINTSHOP_FACTUUR_HUIDIGEBETAALMETHODE="Huidige betaalmethode"
+COM_BIXPRINTSHOP_FACTUUR_REDRAWN="Factuur opnieuw gemaakt"
 
 COM_BIXPRINTSHOP_ORDER_TOTAALNETTO="Order totaal netto"
 COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal btw"
