--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_bix_ideal.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_bix_ideal.ini
@@ -69,13 +69,15 @@ BIXBANK_KNABNL2H="Knab bank"
 ;statussen
 BIX_SUCCESS="Voltooid"
 BIX_FAILURE="Betaalrequest mislukt"
-BIX_BETALING_VERWERK="Wachtend op betaling"
+BIX_BETALING_VERWACHT="Wachtend op betaling"
+BIX_BETALING_OVERDUE="Betaling te laat"
 BIX_VALIDATION_ERR="Betaalrequest niet valide"
 BIX_TECHNICAL_ERR="Technische fout"
 BIX_REJECTED="Geweigerd"
 BIX_PENDING="In verwerking"
 BIX_CANCELLED="Onderbroken door gebruiker"
 BIX_CANCELLED_MERCH="Onderbroken door bank"
+BIX_CREDITED="Gecrediteerd"
 
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BIX_IDEAL_TRANSACTION_DESC_SPR="Factuur %s, bestelling %s, op %s"
 BIX_PLUGIN_BIX_IDEAL_BETAALRETURN_SPR="Returnpost van iDEAL: bestelID %s, betaalID %s"
