--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
@@ -58,10 +58,12 @@ COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_STAT_CANCELLED_MERCH="Status bij onderb
 ;statussen
 BIX_SUCCESS="Voltooid"
 BIX_FAILURE="Betaalrequest mislukt"
-BIX_BETALING_VERWERK="Wachtend op betaling"
+BIX_BETALING_VERWACHT="Wachtend op betaling"
+BIX_BETALING_OVERDUE="Betaling te laat"
 BIX_VALIDATION_ERR="Betaalrequest niet valide"
 BIX_TECHNICAL_ERR="Technische fout"
 BIX_REJECTED="Geweigerd"
 BIX_PENDING="In verwerking"
 BIX_CANCELLED="Onderbroken door gebruiker"
 BIX_CANCELLED_MERCH="Onderbroken door bank"
+BIX_CREDITED="Gecrediteerd"
