--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_drukkerij_netzodruk.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_drukkerij_netzodruk.ini
@@ -20,3 +20,12 @@ COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_INVALID_DATA="Data incompleet"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_REFRESH_XML="Ververs Netzodruk XML"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_SEND_ORDERFILES="Verstuur orderbestanden naar NZD"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_HUIDIGE_XML_BESTANDEN="Bestanden die nu aan deze order gekoppeld zijn:"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_ACTIECODE="Actiecode meesturen?"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_ACTIECODE_ALLEEN_FACTUUR="Alleen als factuuradres?"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_ACTIECODE_EENPERBESTEL="Eén per bestelling?"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_ACTIECODE_MINBEDRAG="Minimaal bestelbedrag"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_ACTIECODE_CODE="Actiecode"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_ACTIECODE_CODEDESCR="Beschrijving code"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_SENDACTION="Actiecode meezenden"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_SENDMAIL="Verstuur ook mail"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_NETZODRUK_ORDERTEMPLATE="Template ordermails"
