--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -217,13 +217,15 @@ COM_BIXPRINTSHOP_BESTELLING_PARAMS_FACTUURREFERENTIE_DESC="De referentie die op 
 ;statussen
 BIX_SUCCESS="Voltooid"
 BIX_FAILURE="Betaalrequest mislukt"
-BIX_BETALING_VERWERK="Wachtend op betaling"
+BIX_BETALING_VERWACHT="Wachtend op betaling"
+BIX_BETALING_OVERDUE="Betaling te laat"
 BIX_VALIDATION_ERR="Betaalrequest niet valide"
 BIX_TECHNICAL_ERR="Technische fout"
 BIX_REJECTED="Geweigerd"
 BIX_PENDING="In verwerking"
 BIX_CANCELLED="Onderbroken door gebruiker"
 BIX_CANCELLED_MERCH="Onderbroken door bank"
+BIX_CREDITED="Gecrediteerd"
 ;foutmeldingen
 COM_BIXPRINTSHOP_BETALEN_GEENBESTELID="Geen bestelling-ID gevonden! Bekijk de order via uw gebruikersprofiel"
 COM_BIXPRINTSHOP_BETALEN_GEEN_PLUGINRETURN="Geen return ontvangen van betaalplugins."
