--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -243,6 +243,7 @@ BIX_UPLOAD_FAILED="Upload mislukt"
 BIX_UPLOAD_DROPFILES="Sleep bestanden in dit kader om te deze te uploaden."
 BIX_UPLOAD_PROCESSING_FILES="Bestanden verwerken.."
 BIX_UPLOAD_PROGRESS="{percent}% van {total_size}"
+BIX_UPLOAD_PROGRESS_MB="{uploaded_size} van {total_size}"
 BIX_UPLOAD_WAITING="Wachten"
 BIX_DOWNLOAD="Downloaden"
 BIX_DELETE="Verwijderen"
