--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
@@ -62,3 +62,17 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_GRAY="Grijs"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_CMYK="CMYK"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_RGB="RGB"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_LAB="Lab"
+
+
+;show uloads
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UPLOAD_MORE="Meer bestanden uploaden"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD="Naar de wizard"
+
+;wizard
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_SELECT_FILE="Selecteer eerst een bestand"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_STAP_SPR="Stap %d"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VORIGE="Vorige stap"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VOLGENDE="Volgende stap"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UW_PRODUCT="Uw product"
+
+
