--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
@@ -77,3 +77,4 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_ANDER_BESTAND="Ander bestand"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UW_PRODUCT="Uw product"
 
 COM_BIXPRINTSHOP_PLUGIN_PREFLIGHT4CLOUD_THUMB="Preview"
+COM_BIXPRINTSHOP_PLUGIN_PREFLIGHT4CLOUD_SEL_PRODUCT="Product"
